--- a/style.css
+++ b/style.css
@@ -10,3 +10,65 @@
 html {
     font-size: 10px;
 }
+
+
+.character-container {
+    background-color: #f2f2f2;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.character {
+    width: 250px;
+    height: 250px;
+}
+
+.character img {
+    padding: 20px;
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.character-life {
+    width: 100%;
+    height: 20px;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
+.character-life span {
+    display: block;
+    background: #ffbf00;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.player-img {
+    position: relative;
+}
+
+.button-container {
+    width: 100%;
+    position: absolute;
+    bottom: -30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button-container button {
+    padding: 5px 14px;
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+    border-radius: 5px;
+    border: 2px solid #3d3d3d;
+    background: #dadada;
+}
+
+.button-container button:hover {
+    cursor: pointer;
+}
